Modificado: caminho do script

--- a/telas/lista_cliente.html
+++ b/telas/lista_cliente.html
@@ -56,6 +56,6 @@
         </div>
     </main>
 </body>
-<script src="../service/cliente-service.js"></script>
+<script type="module" src="../controller/listaCliente-controller.js"></script>
 
 </html>
